# roco

./: .gitignore  CMakeLists.txt  readme.md
build_scripts/: cust_build.sh  custom_build.sh  custom_build.sh.sh  linux_Debug.sh  linux_MinSizeRel.sh  linux_RelWithDebInfo.sh  linux_Release.sh
cmake/: add_defines.cmake  add_target.cmake  check.cmake  common.cmake  custom_build.cmake
projects/cproj/: CMakeLists.txt
projects/cproj/inc/roco_core/: roco_core.h
projects/cproj/src/cproj/: cproj.c
projects/cproj/src/roco_core/: roco_core.c
projects/cproj/tests/: CMakeLists.txt  cproj_first_test.c
projects/p01/: CMakeLists.txt
projects/p01/inc/p01/: p01.hpp
projects/p01/src/p01/: p01.cpp
projects/p01/tests/: CMakeLists.txt  p01_test.cpp
projects/project01/: CMakeLists.txt
projects/project01/inc/project01/: export.h  project01.h
projects/project01/src/project01/: project01.c
projects/project01/tests/: CMakeLists.txt  first_test.c
projects/project02/: CMakeLists.txt
projects/project02/src/project02/: project02.c
projects/project03/: CMakeLists.txt
projects/project03/inc/project03/: export.h  project03.h
projects/project03/src/project03/: project03.c
projects/roco_core/: CMakeLists.txt
projects/roco_core/tests/: CMakeLists.txt  roco_core_algo_test.cpp  roco_core_allocators_test.cpp  roco_core_array_test.cpp  roco_core_first_test.cpp  roco_core_iterator_test.cpp  roco_core_ptr_test.cpp  roco_core_vector_test.cpp
projects/roco_dsa/: CMakeLists.txt
projects/roco_dsa/tests/: CMakeLists.txt  roco_dsa_array_test.cpp  roco_dsa_first_test.cpp
(+22 files in other folders)
